@@ -1,3 +1,4 @@
 =sys-kernel/upkern-3.1.4
+=sys-kernel/upkern-3.1.7
 <app-portage/pclean-1
 media-video/droidcam
