@@ -1,8 +1,10 @@
 DIST upkern-2.0.14.tar.bz2 9896 RMD160 9dc95fac0947346d81dc1243ac45af310b10faaa SHA1 4c4257ab9b02ac9a85cbd5810edc45baf556104b SHA256 8a6f216796b99779798ad68433b338dd35491844a088afa236cf20ae9364736d
 DIST upkern-3.1.6.tar.bz2 18214 RMD160 a5d2156e7916e3db797d787f6c6573b37b614fd5 SHA1 75089ed4a4688aa5561c383c238ea39c519cb0fb SHA256 0bb802e5d1a9cd67445a6b5cc6c076179ee63464331415261eaa3a655fdee834
 DIST upkern-3.1.7.tar.bz2 18332 RMD160 0b599f3e62d9f33b2b0cdecaf2a6374b926aa7ce SHA1 88c9462c97821c4599b0e9787ed9e8b2975c864a SHA256 1f171e432194bcbd68d45717887fc0bed3814c79711691655bbec2478584fa9d
+DIST upkern-3.1.8.tar.bz2 18331 RMD160 6982883ff920b91069a018832cf05cc9fcc6e7d1 SHA1 23e103094c7151f09f9332032516680ef67fc0de SHA256 fb411c96c8a5e8f9c0f1d99af91abfad16d862135870bcb91b113b0897f19884
 EBUILD upkern-2.0.14.ebuild 588 RMD160 6e37da7e4673db24f9023af51d9d3161c6df87c0 SHA1 ae536faacc04e2899e1675fa0a71113ac83a0cea SHA256 16e89d066ab84fdd30e8d7a01ede8790686a4074bab2762cd2e3e278bcaf5d13
 EBUILD upkern-3.1.6.ebuild 823 RMD160 801c53e5ec006f7f56ae551e5bd15f350bb3dfe5 SHA1 1b7b4650682cc0c8236e08bbcba5d620da378070 SHA256 44ca1784cebab85c0e663103b93940ef874b3687ab6ba50185e2a070c3b12901
 EBUILD upkern-3.1.7.ebuild 823 RMD160 801c53e5ec006f7f56ae551e5bd15f350bb3dfe5 SHA1 1b7b4650682cc0c8236e08bbcba5d620da378070 SHA256 44ca1784cebab85c0e663103b93940ef874b3687ab6ba50185e2a070c3b12901
-MISC ChangeLog 2020 RMD160 a4683f6c1da52fa89efb1f87f1b18357ce2d8ad4 SHA1 6b064b22fb21efcb10bb76dd218fd2b6e3fb086f SHA256 2b838f3b074bad414cb5009d3587a0144fc0db34dc018d69f58100b19e7c7998
+EBUILD upkern-3.1.8.ebuild 823 RMD160 801c53e5ec006f7f56ae551e5bd15f350bb3dfe5 SHA1 1b7b4650682cc0c8236e08bbcba5d620da378070 SHA256 44ca1784cebab85c0e663103b93940ef874b3687ab6ba50185e2a070c3b12901
+MISC ChangeLog 2124 RMD160 fc8d0af7ef4b71469ca636e148115719686772c3 SHA1 94c914ff38147a0be15fc7b12e1db4cc789d9f85 SHA256 5c152cdf953a26a0a8adc8158cd62277b1d904487ae486e75886489b9a7e0438
 MISC metadata.xml 405 RMD160 a97224d51d49407236780494c188ecd441fd919c SHA1 3d9c627583480affd484ac0b1812c75078c2d27f SHA256 cd20665d6d4bcbf01de020e45ea7268c9f8149d179f64228ac18113de0b533f7
