@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-block/open-iscsi/ChangeLog,v 1.12 2007/02/22 00:59:56 jokey Exp $
 
+*upkern-3.1.8 (12 Dec 2010)
+
+  12 Dec 2010; <alunduil@gentoo.org> +upkern-3.1.8.ebuild:
+  upkern-3.1.8
+
 *upkern-3.1.7 (12 Dec 2010)
 
   12 Dec 2010; <alunduil@gentoo.org> -upkern-3.1.2.ebuild,
